--- a/sections/reset-password-form.liquid
+++ b/sections/reset-password-form.liquid
@@ -1,18 +1,24 @@
 {{ "account.css" | asset_url | stylesheet_tag }}
 
-{%- assign title                 = section.settings.title -%}
+{%- assign back                  = section.settings.back -%}
+{%- assign color_scheme          = section.settings.color_scheme -%}
 {%- assign description           = section.settings.description -%}
 {%- assign email_label           = section.settings.email_label -%}
-{%- assign back                  = section.settings.back -%}
-{%- assign reset_password_label  = section.settings.reset_password_label -%}
-{%- assign color_scheme          = section.settings.color_scheme -%}
+{%- assign image                 = section.settings.image -%}
+{%- assign image_opacity         = section.settings.image_opacity -%}
 {%- assign padding_top           = section.settings.padding_top -%}
 {%- assign padding_bottom        = section.settings.padding_bottom -%}
 {%- assign padding_top_mobile    = section.settings.padding_top_mobile -%}
 {%- assign padding_bottom_mobile = section.settings.padding_bottom_mobile -%}
+{%- assign reset_password_label  = section.settings.reset_password_label -%}
+{%- assign rounded_corners       = section.settings.rounded_corners -%}
+{%- assign show_border           = section.settings.show_border -%}
+{%- assign title                 = section.settings.title -%}
 
 {% comment %} CSS variables start {% endcomment %}
 {%- capture variables -%}
+  --image-opacity: {{- image_opacity | append: "%" -}};
+
   {%- case padding_top -%}
     {%- when 'small' -%}
       --padding-top: 40px;
@@ -48,6 +54,17 @@
     {%- when 'large' -%}
       --padding-bottom-mobile: 60px;
   {%- endcase -%}
+
+  {%- case rounded_corners -%}
+    {%- when 'none' -%}
+      --border-radius-rounded-blocks: 0px;
+    {%- when 'small' -%}
+      --border-radius-rounded-blocks: 8px;
+    {%- when 'medium' -%}
+      --border-radius-rounded-blocks: 16px;
+    {%- when 'large' -%}
+      --border-radius-rounded-blocks: 32px;
+  {%- endcase -%}
 {%- endcapture -%}
 {% comment %} CSS variables end {% endcomment %}
 
@@ -56,81 +73,68 @@
   style="{{- variables | escape -}}"
 >
   <div class="account__container container">
-    <a href="{{ routes.login_url }}" class="account__breadcrumbs">
-      <i class="fa-regular fa-chevron-left account__breadcrumbs-chevron"></i>
-      {%- if back != blank -%}
-        {{- back -}}
-      {%- else -%}
-        Back
-      {%- endif -%}
-    </a>
-
-    <h3 class="account__title text-center">
-      {%- if title != blank -%}
-        {{- title -}}
-      {%- else -%}
-        Reset your password
-      {%- endif -%}
-    </h3>
-
-    <div class="account__divider text-center">
-      {%- if description != blank -%}
-        {{- description -}}
-      {%- else -%}
-        Enter your email address below and we will send you an email with a link to create a new password
-      {%- endif -%}
-    </div>
-
-    {%- form 'reset_password' -%}
-      <div class="account-fieldset__block account__divider--small{% if form.errors.email %} account-fieldset--error{%- endif -%}">
-        <label for="user_email" class="account-fieldset__label">
-          {%- if email_label != blank -%}
-            {{- email_label -}}
-          {%- else -%}
-            Email
-          {%- endif -%}
-
-          <span class="account-fieldset__label-backlight">
-            {%- if email_label != blank -%}
-              {{- email_label -}}
-            {%- else -%}
-              Email
-            {%- endif -%}
-          </span>
-        </label>
-
-        <input
-          value="{{- form.email -}}"
-          placeholder=" "
-          class="account-fieldset__input"
-          autofocus="autofocus"
-          autocomplete="email"
-          type="email"
-          name="user[email]"
-          id="user_email">
-
-        <div class="account__error-message">
-          {{- form.errors.email -}}
-        </div>
+    <div class="account__inner{% if show_border %} account__inner--border{%- endif -%}">
+      <div class="account__top account__divider--small">
+        <a href="{{ routes.login_url }}" class="account__breadcrumbs">
+          <i class="fa-regular fa-chevron-left account__breadcrumbs-chevron"></i>
+          {{- back | default: "Back" -}}
+        </a>
       </div>
 
-      <button
-        type="submit"
-        class="account__button button button--primary button--large"
-        name="commit"
-        data-disable-with="Send me reset password instructions"
-      >
-        {%- if reset_password_label != blank -%}
-          {{- reset_password_label -}}
-        {%- else -%}
-          Reset password
-        {%- endif -%}
-      </button>
-    {%- endform -%}
-  </div>
-</div>
+      <h3 class="account__title text-center">
+        {{- title | default: "Forgot password" -}}
+      </h3>
 
-{% include 'script-full-height' %}
+      <div class="account__divider text-center">
+        {{- description | default: "Enter your email address and within a few minutes you will receive a link with which you can set a new password." -}}
+      </div>
+
+      {%- form 'reset_password' -%}
+        <div class="account-fieldset__block{% if form.errors.email %} account-fieldset--error{%- endif -%}">
+          <label for="user_email" class="account-fieldset__label">
+            {{- email_label | default: "Email" -}}
+
+            <span class="account-fieldset__label-backlight">
+              {{- email_label | default: "Email" -}}
+            </span>
+          </label>
+
+          <input
+            value="{{- form.email -}}"
+            placeholder=" "
+            class="account-fieldset__input"
+            autofocus="autofocus"
+            autocomplete="email"
+            type="email"
+            name="user[email]"
+            id="user_email">
+
+          <div class="account__error-message">
+            {{- form.errors.email -}}
+          </div>
+        </div>
+
+        <button
+          type="submit"
+          class="account__button button button--primary button--large"
+          name="commit"
+          data-disable-with="Send me reset password instructions"
+        >
+          {{- reset_password_label | default: "Reset password" -}}
+        </button>
+      {%- endform -%}
+    </div>
+  </div>
+  {%- if image.url != blank -%}
+    <div class="account__background-wrapper">
+      {%- render 'image',
+          image: image,
+          class: 'account__background-image',
+          size: 'xxl'
+      -%}
+    </div>
+  {%- endif -%}
+</div>
 
 {% schema %}
   {
@@ -164,6 +168,50 @@
         "type": "text",
         "id": "email_label",
         "label": "Email label"
+      },
+      {
+        "type": "image_picker",
+        "id": "image",
+        "label": "Background image",
+        "default": "booqable://assets/image-curvilinear-lines.png"
+      },
+      {
+        "type": "number",
+        "id": "image_opacity",
+        "label": "Background overlay percentage",
+        "min": 0,
+        "max": 100,
+        "default": 10
+      },
+      {
+        "type": "select",
+        "id": "rounded_corners",
+        "label": "Rounded corners",
+        "options": [
+          {
+            "value": "none",
+            "label": "None"
+          },
+          {
+            "value": "small",
+            "label": "Small"
+          },
+          {
+            "value": "medium",
+            "label": "Medium"
+          },
+          {
+            "value": "large",
+            "label": "Large"
+          }
+        ],
+        "default": "none"
+      },
+      {
+        "type": "checkbox",
+        "id": "show_border",
+        "label": "Show border",
+        "default": true
       },
       {
         "type": "header",
