--- a/sections/collections.liquid
+++ b/sections/collections.liquid
@@ -5,8 +5,10 @@
   {%- assign color_scheme           = section.settings.color_scheme -%}
   {%- assign counter_singular       = section.settings.counter_singular -%}
   {%- assign counter_plural         = section.settings.counter_plural -%}
-  {%- assign grid                   = section.settings.grid -%}
   {%- assign full_width             = section.settings.full_width -%}
+  {%- assign grid                   = section.settings.grid -%}
+  {%- assign overlay_background     = section.settings.overlay_background -%}
+  {%- assign overlay_color          = section.settings.overlay_color -%}
   {%- assign overlay_opacity        = section.settings.overlay_opacity -%}
   {%- assign padding_top            = section.settings.padding_top -%}
   {%- assign padding_bottom         = section.settings.padding_bottom -%}
@@ -22,6 +24,12 @@
 
   {% comment %} CSS variables start {% endcomment %}
   {%- capture variables -%}
+    {%- if show_overlay -%}
+      --color-overlay: {{- overlay_color -}};
+      --background-overlay: {{- overlay_background -}};
+      --background-overlay-00: {{- overlay_background | append: "00" -}};
+    {%- endif -%}
+
     {%- case padding_top -%}
       {%- when 'small' -%}
         --padding-top: 24px;
@@ -208,9 +216,21 @@
         "default": true
       },
       {
+        "type": "color",
+        "id": "overlay_color",
+        "label": "Color",
+        "default": "#FFFFFF"
+      },
+      {
+        "type": "color",
+        "id": "overlay_background",
+        "label": "Background color",
+        "default": "#1A3333"
+      },
+      {
         "type": "number",
         "id": "overlay_opacity",
-        "label": "Overlay percentage",
+        "label": "Background percentage",
         "min": 0,
         "max": 100,
         "default": 100
@@ -222,7 +242,7 @@
       {
         "type": "select",
         "id": "grid",
-        "label": "Columns",
+        "label": "Layout",
         "options": [
           {
             "value": "two",
